--- a/html/role_selection.html
+++ b/html/role_selection.html
@@ -60,7 +60,7 @@
         <div class="container footer-content">
             <!-- Column 1: Logo & Address -->
             <div class="footer-column">
-                <img src="..\images/logo.png" alt="Ram Hospital" class="footer-logo">
+                <img src="../images/logo.png" alt="Ram Hospital" class="footer-logo">
                 <div class="footer-address">
                     <p>บริษัท โรงพยาบาล รามคำแหง จำกัด (มหาชน) 436</p>
                     <p>ถนนรามคำแหง แขวงหัวหมาก เขตบางกะปิ</p>
@@ -88,7 +88,7 @@
     <script>
         const ram = document.getElementById('ram');
         ram.addEventListener('click', () => {
-            window.location.href = 'index.html'
+            window.location.href = '../index.html'
         })
     </script>
 </body>
