--- a/html/Doctor_dashboard.html
+++ b/html/Doctor_dashboard.html
@@ -11,8 +11,8 @@
 
 <body style="background-color: #f9f9f9;">
 
-    <div class="header-bg">s
-        <h2 class="text-2xl text-primary-blue font-bold">แพทย์ (Doctor)</h2>
+    <div class="header-bg">
+        <h2 class="text-2xl text-primary-blue font-bold " style="color: white;">แพทย์ (Doctor)</h2>
     </div>
 
     <div class="container">
