--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -18,7 +18,6 @@
         <nav>
             <ul>
                 <li><a href="role_selection.html">login</a></li>
-                <li><a href="index.html">main</a></li>
                 <li><a href="contact_us.html" style="font-weight:bold;">contact us</a></li>
             </ul>
         </nav>
@@ -100,7 +99,7 @@
     <script>
         const ram = document.getElementById('ram');
         ram.addEventListener('click', () => {
-            window.location.href = 'index.html'
+            window.location.href = '../index.html'
         })
     </script>
 </body>
