--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <script>
         const ram = document.getElementById('ram');
         ram.addEventListener('click', () => {
-            window.location.href = './index.html'
+            window.location.href = 'index.html'
         })
     </script>
 </body>
