--- a/index.html
+++ b/index.html
@@ -102,12 +102,7 @@
         </div>
     </footer>
 
-    <script>
-        const ram = document.getElementById('ram');
-        ram.addEventListener('click', () => {
-            window.location.href = 'index.html'
-        })
-    </script>
+    <script src="./javascript/ram.js"></script>
 </body>
 
 </html>
