--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -17,8 +17,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="role_selection.html">login</a></li>
-                <li><a href="contact_us.html" style="font-weight:bold;">contact us</a></li>
+                <li><a href="../html/role_selection.html">login</a></li>
+                <li><a href="../html/contact_us.html" style="font-weight:bold;">contact us</a></li>
             </ul>
         </nav>
     </header>
