--- a/html/Doctor_dashboard.html
+++ b/html/Doctor_dashboard.html
@@ -24,7 +24,7 @@
                     <span class="user-tag">แพทย์ : xxxxxx</span>
                 </div>
                 <div>
-                    <a href="role_selection.html" class="btn btn-secondary"
+                    <a href="../html/role_selection.html" class="btn btn-secondary"
                         style="padding: 0.2rem 1.3rem; border-radius: 1rem; font-size: 1.2rem; text-decoration: underline;">back</a>
                 </div>
             </div>
