--- a/html/doctor_login.html
+++ b/html/doctor_login.html
@@ -13,7 +13,7 @@
 
     <div class="header-strip">
         <h2 class="text-2xl font-bold">แพทย์ (Doctor)</h2>
-        <a href="role_selection.html" style="color: white; font-size: 1rem;">back</a>
+        <a href="../html/role_selection.html" style="color: white; font-size: 1rem;">back</a>
     </div>
 
     <div class="container">
@@ -22,14 +22,14 @@
                 <span style="border-bottom: 5px solid var(--secondary-blue);">login</span>
             </h1>
 
-            <form action="doctor_dashboard.html">
+            <form action="../html/doctor_dashboard.html">
                 <div class="form-group">
                     <label>user-id</label>
                     <input type="text" class="form-input" id="userid">
                 </div>
                 <div class="form-group">
                     <label>id-number</label>
-                    <input type="text" class="form-input" id="passcode">
+                    <input type="password" class="form-input" id="passcode">
                 </div>
 
                 <div class="mt-3">
@@ -42,7 +42,7 @@
             </form>
         </div>
     </div>
-    <script src="/javascript/doctor_login.js   "></script>
+    <script src="../javascript/doctor_login.js   "></script>
 </body>
 
 </html>
