--- a/html/patienta_list.html
+++ b/html/patienta_list.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Login - Cardiac Rehab</title>
-    <link rel="stylesheet" href="..\style\style.css">
-    <link rel="stylesheet" href="..\style\auth.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/auth.css">
 </head>
 
 <body style="background-color: #f5f5f5;">
 
     <div class="header-strip">
         <h2 class="text-2xl font-bold">เจ้าหน้าที่ (staff)</h2>
-        <a href="role_selection.html" style="color: white; font-size: 1rem;text-decoration: none;">back</a>
+        <a href="../html/role_selection.html" style="color: white; font-size: 1rem;text-decoration: none;">back</a>
     </div>
 
     <div class="container">
