--- a/html/role_selection.html
+++ b/html/role_selection.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Role Selection - Cardiac Rehab</title>
-    <link rel="stylesheet" href="..\style\style.css">
-    <link rel="stylesheet" href="..\style\auth.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/auth.css">
 </head>
 
 <body style="min-height: 100vh; display: flex; flex-direction: column;">
@@ -14,13 +14,13 @@
     <!-- Reuse Header layout -->
     <header>
         <div class="logo">
-            <img src="..\images/logo.png" alt="Ram Hospital Logo" style="height: 60px;cursor: pointer;" id="ram">
+            <img src="../images/logo.png" alt="Ram Hospital Logo" style="height: 60px;cursor: pointer;" id="ram">
         </div>
         <nav>
             <ul>
                 <li><a href="role_selection.html" style="font-weight:bold;">login</a></li>
                 <!-- <li><a href="index.html">main</a></li> Link to main might be redundant if logo goes there, but keeping it -->
-                <li><a href="contact_us.html">contact us</a></li>
+                <li><a href="../html/contact_us.html">contact us</a></li>
             </ul>
         </nav>
     </header>
