--- a/html/staff_login.html
+++ b/html/staff_login.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Login - Cardiac Rehab</title>
-    <link rel="stylesheet" href="..\style\style.css">
-    <link rel="stylesheet" href="..\style\auth.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/auth.css">
 </head>
 
 <body style="background-color: #f5f5f5;">
 
     <div class="header-strip">
         <h2 class="text-2xl font-bold">เจ้าหน้าที่ (staff)</h2>
-        <a href="role_selection.html" style="color: white; font-size: 1rem;">back</a>
+        <a href="../html/role_selection.html" style="color: white; font-size: 1rem;">back</a>
     </div>
 
     <div class="container">
@@ -22,14 +22,14 @@
                 <span style="border-bottom: 5px solid var(--secondary-blue);">login</span>
             </h1>
 
-            <form action="staff_dashboard.html">
+            <form action="../html/staff_dashboard.html">
                 <div class="form-group">
                     <label>user-id</label>
                     <input type="text" class="form-input" id="userid">
                 </div>
                 <div class="form-group">
                     <label>id-number</label>
-                    <input type="text" class="form-input" id="passcode">
+                    <input type="password" class="form-input" id="passcode">
                 </div>
 
                 <div class="mt-3">
@@ -63,7 +63,7 @@
             error.style.color = 'red';
         }
     </script> -->
-    <script src="/javascript/admin_login.js"></script>
+    <script src="../javascript/admin_login.js"></script>
 </body>
 
 </html>
