--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./html/role_selection.html">login</a></li>
-                <li><a href="./html/contact_us.html">contact us</a></li>
+                <li><a href="../html/role_selection.html">login</a></li>
+                <li><a href="../html/contact_us.html">contact us</a></li>
             </ul>
         </nav>
     </header>
@@ -44,7 +44,7 @@
                 </p>
             </div>
             <div>
-                <img src="./images/medical_team_meeting.png" alt="Medical Team" class="medical-team-img">
+                <img src="../images/medical_team_meeting.png" alt="Medical Team" class="medical-team-img">
             </div>
         </div>
 
@@ -76,7 +76,7 @@
         <div class="container footer-content">
             <!-- Column 1: Logo & Address -->
             <div class="footer-column">
-                <img src="./images/logo.png" alt="Ram Hospital" class="footer-logo">
+                <img src="../images/logo.png" alt="Ram Hospital" class="footer-logo">
                 <div class="footer-address">
                     <p>บริษัท โรงพยาบาล รามคำแหง จำกัด (มหาชน) 436</p>
                     <p>ถนนรามคำแหง แขวงหัวหมาก เขตบางกะปิ</p>
@@ -102,7 +102,7 @@
         </div>
     </footer>
 
-    <script src="./javascript/ram.js"></script>
+    <script src="../javascript/ram.js"></script>
 </body>
 
 </html>
