--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../html/role_selection.html">login</a></li>
-                <li><a href="../html/contact_us.html">contact us</a></li>
+                <li><a href="./html/role_selection.html">login</a></li>
+                <li><a href="./html/contact_us.html">contact us</a></li>
             </ul>
         </nav>
     </header>
@@ -44,7 +44,7 @@
                 </p>
             </div>
             <div>
-                <img src="../images/medical_team_meeting.png" alt="Medical Team" class="medical-team-img">
+                <img src="./images/medical_team_meeting.png" alt="Medical Team" class="medical-team-img">
             </div>
         </div>
 
