--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container footer-content">
             <!-- Column 1: Logo & Address -->
             <div class="footer-column">
-                <img src="../images/logo.png" alt="Ram Hospital" class="footer-logo">
+                <img src="./images/logo.png" alt="Ram Hospital" class="footer-logo">
                 <div class="footer-address">
                     <p>บริษัท โรงพยาบาล รามคำแหง จำกัด (มหาชน) 436</p>
                     <p>ถนนรามคำแหง แขวงหัวหมาก เขตบางกะปิ</p>
