--- a/html/Doctor_dashboard.html
+++ b/html/Doctor_dashboard.html
@@ -24,7 +24,7 @@
                     <span class="user-tag">แพทย์ : xxxxxx</span>
                 </div>
                 <div>
-                    <a href="../html/role_selection.html" class="btn btn-secondary"
+                    <a href="Doctor_role_selection.html" class="btn btn-secondary"
                         style="padding: 0.2rem 1.3rem; border-radius: 1rem; font-size: 1.2rem; text-decoration: underline;">back</a>
                 </div>
             </div>
@@ -74,8 +74,6 @@
 
                 <div class="flex gap-1">
                     <button type="button" class="btn btn-primary" style="flex: 1; border-radius: 10px;">save</button>
-                    <button type="button" class="btn"
-                        style="flex: 1; background: #ddd; color: #333; border-radius: 10px;">cancel</button>
                 </div>
             </form>
         </div>
