--- a/html/Doctor_role_selection.html
+++ b/html/Doctor_role_selection.html
@@ -32,23 +32,16 @@
 
     <div class="container" style="flex: 1;">
         <div class="role-container">
-            <div class="role-card" onclick="window.location.href='staff_login.html'">
-                <img src="../images/staff_icon.png" alt="Staff Icon"
-                    style="width: 80px; height: 80px; margin-bottom: 1rem;">
-                <h3 class="text-2xl font-bold mb-1">เจ้าหน้าที่ (staff)</h3>
-                <p class="text-dark">บันทึกผล ดูความคืบหน้า</p>
-            </div>
-            <div class="role-card" onclick="window.location.href='doctor_login.html'">
+            <div class="role-card" onclick="window.location.href='Doctor_dashboard.html'">
                 <img src="../images/doctor_role_icon.png" alt="Doctor Icon"
                     style="width: 80px; height: 80px; margin-bottom: 1rem;">
-                <h3 class="text-2xl font-bold mb-1">แพทย์(doctor)</h3>
-                <p class="text-dark">ลงทะเบียน ประเมินผู้ป่วย</p>
+                <h3 class="text-2xl font-bold mb-1">ลงทะเบียน ประเมินผู้ป่วย</h3>
             </div>
-            <div class="role-card" onclick="window.location.href='patient_login.html'">
+            <div class="role-card" onclick="window.location.href='patient_list.html'">
                 <img src="../images/patient_role_icon.png" alt="Patient Icon"
                     style="width: 80px; height: 80px; margin-bottom: 1rem;">
-                <h3 class="text-2xl font-bold mb-1">ผู้ป่วย (patient)</h3>
-                <p class="text-dark">ดูความคืบหน้า และติดตามผล</p>
+                <h3 class="text-2xl font-bold mb-1">ดูความคืบหน้า และติดตามผล</h3>
+
             </div>
 
         </div>
