--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -28,7 +28,7 @@
     </section>
 
     <div class="container mt-3 mb-3">
-        <div class="flex responsive-stack gap-4" style="align-items: flex-start;">
+        <div class="flex responsive-stack gap-4" style="align-items: center;">
             <!-- Left Info -->
             <div style="flex: 1;">
                 <h2 class="text-2xl mb-1 font-bold">ติดต่อด่วน</h2>
