--- a/html/patient_dashboard_staff.html
+++ b/html/patient_dashboard_staff.html
@@ -17,11 +17,9 @@
             <div class="user-profile user-badge">
                 <h2 class="text-2xl font-bold">สวัสดี, คุณ xxxxxx</h2>
                 <div class="user-tag">ผู้ป่วยพักฟื้น : xxxxxx</div>
+                <div class="user-tag">จำนวนการออกกำลังกาย : 0 ครั้ง</div>
             </div>
             <div class="flex gap-2">
-                <!-- action-buttons replaced with flex gap-2 or keep action-buttons class if in css? It was inline flex gap 0.5rem in original internal style, I should check if .action-buttons is in style.css. I don't recall seeing it. I'll use inline style or utility for now, or add to CSS. Wait, style.css doesn't have action-buttons. I'll use flex classes. -->
-                <button class="btn btn-primary btn-sm">save</button>
-                <button class="btn btn-secondary btn-sm">report</button>
                 <button class="btn btn-secondary btn-sm" onclick="window.location.href='role_selection.html'">go
                     back</button>
             </div>
@@ -86,7 +84,9 @@
             </div>
         </div>
     </div>
-
+    <div class="flex gap-2">
+        <button class="btn btn-primary btn-sm" style="margin: auto;">save</button>
+    </div>
     <footer class="main-footer">
         <div class="container footer-content">
             <!-- Column 1: Logo & Address -->
