--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 
         <!-- About Section -->
         <div class="flex responsive-stack gap-4">
-            <div style="flex: 0 0 200px;">
+            <div style="flex: 0 0 50px;">
                 <h2 class="about-title">about</h2>
             </div>
             <div>
                 <p class="text-xl mb-1">What services and information does the patient portal provide?</p>
                 <ul class="about-list">
-                    <li>สัญญาณชีพขณะออกจากโรงพยาบาล</li>
-                    <li>ประวัติผู้ป่วย</li>
-                    <li>บันทึกค่าสุขภาพ (ความดันโลหิต, อัตราการเต้นหัวใจ)</li>
-                    <li>บันทึกการออกกำลังกาย (กิจกรรม, ระยะเวลา)</li>
-                    <li>หน่วยวัดความหนักการออกกำลังกาย</li>
-                    <li>กราฟสถิติการเต้นของหัวใจ</li>
-                    <li>กราฟคลื่นหัวใจ</li>
+                    <li style="text-align: left;">สัญญาณชีพขณะออกจากโรงพยาบาล</li>
+                    <li style="text-align: left;">ประวัติผู้ป่วย</li>
+                    <li style="text-align: left;">บันทึกค่าสุขภาพ (ความดันโลหิต, อัตราการเต้นหัวใจ)</li>
+                    <li style="text-align: left;">บันทึกการออกกำลังกาย (กิจกรรม, ระยะเวลา)</li>
+                    <li style="text-align: left;">หน่วยวัดความหนักการออกกำลังกาย</li>
+                    <li style="text-align: left;">กราฟสถิติการเต้นของหัวใจ</li>
+                    <li style="text-align: left;">กราฟคลื่นหัวใจ</li>
                 </ul>
             </div>
         </div>
