--- a/html/role_selection.html
+++ b/html/role_selection.html
@@ -26,7 +26,7 @@
     </header>
 
     <section class="hero-banner">
-        <h1 class="text-4xl font-bold">cardiac rehab center</h1>
+        <h1 class="text-4xl font-bold">Cardiac Rehab Center</h1>
         <p class="text-xl">ระบบบันทึกและติดตามฟื้นฟูสมรรถภาพหัวใจ</p>
     </section>
 
@@ -41,7 +41,7 @@
             <div class="role-card" onclick="window.location.href='doctor_login.html'">
                 <img src="../images/doctor_role_icon.png" alt="Doctor Icon"
                     style="width: 80px; height: 80px; margin-bottom: 1rem;">
-                <h3 class="text-2xl font-bold mb-1">แพทย์(doctor)</h3>
+                <h3 class="text-2xl font-bold mb-1">แพทย์ (doctor)</h3>
                 <p class="text-dark">ลงทะเบียน ประเมินผู้ป่วย</p>
             </div>
             <div class="role-card" onclick="window.location.href='patient_login.html'">
