--- a/html/patient_list.html
+++ b/html/patient_list.html
@@ -33,7 +33,7 @@
 
             <div class="mt-3">
                 <button onclick="login()" type="submit" class="btn btn-primary text-xl" id="btn"
-                    style="width: 200px;">login</button>
+                    style="width: 200px;">ค้นหา</button>
             </div>
 
 
